--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       box-shadow: 0 15px 40px rgba(0,0,0,0.25);
       max-width: 360px;
       animation: pop 1s ease;
-      z-index: 2;
+      z-index: 1;
     }
     h1 {
       color: #e63946;
@@ -50,6 +50,31 @@
       0% { transform: scale(0.4); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
+  .heart {
+  position: fixed;
+  top: -20px;
+  animation: fall linear forwards;
+  z-index: 9999;
+  pointer-events: none;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(110vh);
+    opacity: 0;
+  }
+}
+    @media (max-width: 600px) {
+  .card {
+    width: 90%;
+    padding: 20px;
+  }
+
+  button {
+    font-size: 16px;
+    padding: 10px 16px;
+  }
+}
   </style>
 </head>
 <body>
@@ -72,8 +97,8 @@
   document.getElementById("response").innerHTML =
     "Yayyy 🥹💖 Tumne YES bola!!!";
 
-  for (let i = 0; i < 80; i++) {
-    setTimeout(createHeart, i * 40);
+  for (let i = 0; i < 120; i++) {
+    setTimeout(createHeart, i * 25);
   }
 }
   function noClicked() {
@@ -89,8 +114,9 @@
   }
 </script>
     <p>
-      You make my days brighter and my heart happier 💕  
-      This is from someone who truly cares 🌹
+      You make my days brighter and my heart happier,dhus saa 💕
+      love you babyyyyyyyyy 
+       
     </p>
     <p><b>— Pihu 💖</b></p>
   </div>
@@ -101,10 +127,10 @@
       heart.classList.add("heart");
       heart.innerHTML = "❤️";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = Math.random() * 25 + 20 + "px";
-      heart.style.animationDuration = Math.random() * 2 + 2 + "s";
+      heart.style.fontSize = Math.random() * 30 + 20 + "px";
+      heart.style.animationDuration = Math.random() * 1.5 + 2 + "s";
       document.body.appendChild(heart);
-      setTimeout(() => { heart.remove()}, 4000);
+      setTimeout(() => { heart.remove()}, 3500);
     }
     setInterval(createHeart, 250);
   </script>
