--- a/index.html
+++ b/index.html
@@ -36,20 +36,7 @@
       font-size: 20px;
       color: #333;
     }
-    .heart {
-      position: absolute;
-      color: red;
-      font-size: 22px;
-      animation: float 6s linear infinite;
-    }
-    @keyframes float {
-      0% { transform: translateY(100vh); opacity: 1; }
-      100% { transform: translateY(-10vh); opacity: 0; }
-    }
-    @keyframes pop {
-      0% { transform: scale(0.4); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
-    }
+    
   .heart {
   position: fixed;
   top: -20px;
@@ -114,8 +101,8 @@
   }
 </script>
     <p>
-      You make my days brighter and my heart happier,dhus saa 💕
-      love you babyyyyyyyyy 
+      You make my days brighter and my heart happier,
+      love u dhuss sa 💕💋
        
     </p>
     <p><b>— Pihu 💖</b></p>
