--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <div class="buttons">
   <button onclick="yesClicked()">YES 💖</button>
-  <button oneclick="noClicked()" id="noBtn" onmouseover="moveNo()">NO 😜</button>
+  <button oneclick="noClicked()">NO 😜</button>
 </div>
 
 <p id="response"></p>
