--- a/index.html
+++ b/index.html
@@ -1,63 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>  DHRUVVVV 💖</title>
+  <title>dhruviiiii💖</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #ffe6f0, #fff0f5);
+      background: linear-gradient(135deg, #ff5f9e, #ff2f6d);
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
-      text-align: center;
+      font-family: 'Arial', sans-serif;
       overflow: hidden;
     }
 
+    .card {
+      background: #ffffff;
+      padding: 32px 22px;
+      width: 88%;
+      max-width: 360px;
+      border-radius: 24px;
+      box-shadow: 0 18px 40px rgba(0,0,0,0.25);
+      text-align: center;
+    }
+
     h1 {
-      font-size: 24px;
-      margin-bottom: 5px;
+      font-size: 22px;
+      margin-bottom: 6px;
     }
 
     h2 {
-      font-size: 20px;
-      margin-bottom: 25px;
+      font-size: 18px;
+      margin-bottom: 26px;
+    }
+
+    .buttons {
+      position: relative;
+      height: 60px;
     }
 
     button {
       font-size: 18px;
       padding: 12px 26px;
-      margin: 10px;
       border: none;
-      border-radius: 30px;
+      border-radius: 28px;
       cursor: pointer;
     }
 
     #yesBtn {
-      background: #ff4d6d;
-      color: white;
+      background: #ff3b6f;
+      color: #fff;
+      margin-right: 10px;
     }
 
     #noBtn {
-      background: #d3d3d3;
-      position: relative;
+      background: #e0e0e0;
+      position: absolute;
       transition: transform 0.25s ease;
     }
 
     #response {
-      margin-top: 20px;
-      font-size: 18px;
+      margin-top: 22px;
+      font-size: 17px;
     }
 
     .heart {
       position: fixed;
       font-size: 26px;
-      animation: fall 3.5s linear forwards;
       top: -30px;
+      animation: fall 3.5s linear forwards;
+      pointer-events: none;
     }
 
     @keyframes fall {
@@ -69,53 +83,49 @@
 
 <body>
 
-<h1>heyyy Dhruv ❤️ </h1>
-<h2>Will you be my Valentine? 😍
-  ILU DHUSS SA </h2>
+<div class="card">
+  <h1> heyyyy Dhruv ❤️ </h1>
+  <h2>Will you be my Valentine? ILU dhussa sa 😍</h2>
 
-<div>
-  <button id="yesBtn" onclick="yesClicked()">YES 💖</button>
-  <button id="noBtn" onclick="noClicked()">NO 😜</button>
+  <div class="buttons">
+    <button id="yesBtn" onclick="yesClicked()">YES 💖</button>
+    <button id="noBtn" onclick="noClicked()">NO 😜</button>
+  </div>
+
+  <p id="response"></p>
 </div>
-
-<p id="response"></p>
 
 <script>
   const noBtn = document.getElementById("noBtn");
 
-  // NO button bhagao – desktop + mobile
+  // NO button bhagao (desktop + mobile)
   noBtn.addEventListener("mouseover", moveNo);
   noBtn.addEventListener("touchstart", moveNo);
 
   function moveNo() {
     const x = Math.random() * 160 - 80;
-    const y = Math.random() * 160 - 80;
+    const y = Math.random() * 80 - 40;
     noBtn.style.transform = `translate(${x}px, ${y}px)`;
   }
 
-  // YES = heart shower (birthday bomb style)
+  // YES click → heart shower
   function yesClicked() {
     document.getElementById("response").innerHTML =
       "Yesss 😍💖 My Valentine forever!";
 
-    for (let i = 0; i < 80; i++) {
+    for (let i = 0; i < 90; i++) {
       const heart = document.createElement("div");
       heart.className = "heart";
       heart.innerHTML = "❤️";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (Math.random() * 2 + 2) + "s";
+      heart.style.animationDuration =
+        (Math.random() * 2 + 2) + "s";
       document.body.appendChild(heart);
 
       setTimeout(() => heart.remove(), 4000);
     }
   }
 
-  // NO click
   function noClicked() {
     document.getElementById("response").innerHTML =
-      "Aww 😢 NO bol diya… dil toot gaya 💔";
-  }
-</script>
-
-</body>
-</html>
+      "Aww
