--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>dhruviiiii💖</title>
+  <title>dhruviiii💖</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -84,8 +84,9 @@
 <body>
 
 <div class="card">
-  <h1> heyyyy Dhruv ❤️ </h1>
-  <h2>Will you be my Valentine? ILU dhussa sa 😍</h2>
+  <h1>heyyy Dhruv ❤️</h1>
+  <h2>Will you be my Valentine? 😍
+  ILU dhuss sa </h2>
 
   <div class="buttons">
     <button id="yesBtn" onclick="yesClicked()">YES 💖</button>
@@ -128,4 +129,9 @@
 
   function noClicked() {
     document.getElementById("response").innerHTML =
-      "Aww
+      "Aww 😢 NO bol diya… 💔";
+  }
+</script>
+
+</body>
+</html>
