--- a/index.html
+++ b/index.html
@@ -104,10 +104,18 @@
   noBtn.addEventListener("touchstart", moveNo);
 
   function moveNo() {
-    const x = Math.random() * 160 - 80;
-    const y = Math.random() * 80 - 40;
-    noBtn.style.transform = `translate(${x}px, ${y}px)`;
-  }
+  const btn = noBtn.getBoundingClientRect();
+
+  const maxX = window.innerWidth - btn.width;
+  const maxY = window.innerHeight - btn.height;
+
+  const x = Math.random() * maxX;
+  const y = Math.random() * maxY;
+
+  noBtn.style.position = "fixed";
+  noBtn.style.left = x + "px";
+  noBtn.style.top = y + "px";
+}
 
   // YES click → heart shower
   function yesClicked() {
