--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
   </div>
 
   <p id="response"></p>
+  <p style="text-align:center; font-size:16px; font-style: italic; margin-bottom:6px;">
+You make my days brighter & heart happier ❤️ love you dhussa sa💋😍
+</p>
+  <p style="font-weight: bold; text-align: center; font-size: 18px;">-Pihu</p>
 </div>
 
 <script>
